updates to present from intellij when talking about j11