@@ -1,29 +1,41 @@
-package lars.java11;
+package lars.presentation;
 
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-public class CollectionsRefueled {
+public class Slide_04 {
 
     @Test
-    void be_unmodifiable() {
-        var stringList = List.of("abc", "def");
-        assertThrows(UnsupportedOperationException.class, () -> stringList.add("lars"));
-        assertThrows(UnsupportedOperationException.class, () -> stringList.remove("abc"));
+    void new_collection_factory_methods() {
+        List<String> list = List.of("Lars", "Oskar");
+        Set<String> set = Set.of("Lars", "Oskar");
+        Map<Long, String> map = Map.of(1L, "Lars", 2L, "Oskar");
+        Map<Long, String> mapEntries = Map.ofEntries(
+                Map.entry(1L, "Lars"),
+                Map.entry(2L, "Oskar")
+        );
+    }
+
+    @Test
+    void unmodifiable() {
+        var stringList = List.of("Lars", "Oskar");
+        assertThrows(UnsupportedOperationException.class, () -> stringList.add("Peppa"));
+        assertThrows(UnsupportedOperationException.class, () -> stringList.remove("Lars"));
         assertThrows(UnsupportedOperationException.class, stringList::clear);
     }
 
     @Test
     void but_not_immutable() {
-        Person lars = new Person("Lars");
+        var lars = new Person("Lars");
         var persons = List.of(lars, new Person("Oskar"));
         assertThat(persons).containsExactly(new Person("Lars"), new Person("Oskar"));
         lars.name = "Larson";
@@ -32,13 +44,19 @@ public class CollectionsRefueled {
 
     @Test
     void not_same_as_collections_unmodifiable_list() {
-        List<Person> inner = Arrays.asList(new Person("Lars"), new Person("Oskar"));
-        List<Person> list1 = Collections.unmodifiableList(inner);
-        List<Person> list2 = List.of(new Person("Lars"), new Person("Oskar"));
-        assertThat(list1).containsExactly(new Person("Lars"), new Person("Oskar"));
-        assertThat(list2).containsExactly(new Person("Lars"), new Person("Oskar"));
-        inner.set(0, new Person("Larson"));
-        assertThat(list1).containsExactly(new Person("Larson"), new Person("Oskar"));
+        Person[] peoples = {new Person("Lars"), new Person("Oskar")};
+        List<Person> inner = Arrays.asList(peoples);
+        List<Person> unmodifiableList = Collections.unmodifiableList(inner);
+
+        List<Person> factoryList = List.of(peoples);
+
+        assertThat(unmodifiableList).containsExactly(new Person("Lars"), new Person("Oskar"));
+        assertThat(factoryList).containsExactly(new Person("Lars"), new Person("Oskar"));
+
+        //inner.set(0, new Person("Larson"));
+        peoples[0] = new Person("Larson");
+        assertThat(unmodifiableList).containsExactly(new Person("Larson"), new Person("Oskar"));
+        assertThat(factoryList).containsExactly(new Person("Lars"), new Person("Oskar"));
     }
 
     @Test
@@ -54,10 +72,11 @@ public class CollectionsRefueled {
     @Test
     void copy_of_allows_duplicates() {
         List<String> names = Arrays.asList("Lars", "Oskar", "Lars");
-        List<String> namesList = List.copyOf(names);
+
+        var namesList = List.copyOf(names);
         assertThat(namesList).containsExactly("Lars", "Oskar", "Lars");
 
-        Set<String> namesSet = Set.copyOf(names);
+        var namesSet = Set.copyOf(names);
         assertThat(namesSet).containsExactlyInAnyOrder("Lars", "Oskar");
     }
 
